# backend

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  celery-start.sh  celery_app.py  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  dependencies.py  index.html  log_config.py  main.py  middleware.py  nixpacks.toml  package-lock.json  package.json  pyproject.toml  railway.json  render.yaml  requirements.txt  start-tunnel.sh  start-worker.sh  start.sh  supabase-migration.sql  supervisord.conf  test_welcome.py
database/: connection.py  models.py  seed.py  supabase-backend-migration.sql  supabase_client.py
migrations/: 002_rls_policies.sql  003_reply_lock.sql  004_missing_indexes.sql  006_updated_at_columns.sql  007_migration_tracker.sql
public/: privacy.html
routers/: admin.py  agents.py  analytics.py  business_profile.py  business_whatsapp.py  campaigns.py  customers.py  dashboard.py  messages.py  notifications.py  webhook.py
scripts/: backup-db.sh
services/: business_whatsapp_service.py  deepseek_service.py  followup_service.py  gemini_service.py  message_pipeline.py  scheduler_service.py  whatsapp_service.py
src/: App.css  App.jsx  index.css  main.jsx
src/components/: Icons.jsx
tasks/: campaign_tasks.py  message_tasks.py
vi-backend/: .env.example  Dockerfile  Procfile  celery-start.sh  celery_app.py  docker-compose.yml  main.py  nginx.conf  requirements.txt  start-server.sh  start-tunnel.sh  start.sh  supervisord.conf
vicloud-admin/: .env.example  index.html  package-lock.json  package.json  vite.config.js
(+94 files in other folders)
