[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "vi-backend"
version = "1.0.0"
description = "VI — WhatsApp customer engagement platform with AI agents"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.136.3",
    "uvicorn[standard]==0.34.2",
    "supabase==2.13.4",
    "celery[redis]==5.6.3",
    "redis==5.3.0",
    "slowapi==0.1.9",
    "sentry-sdk[fastapi]==2.26.1",
    "pydantic[email]==2.13.4",
    "python-dotenv==1.1.0",
    "openai==1.64.0",
    "emoji==2.15.0",
    "requests==2.32.3",
    "python-multipart==0.0.20",
    "prometheus-client==0.21.1",
    "structlog==25.2.0",
]
